fix: Исправдение z-index компонента VidgetCart

--- a/styles/modules/_cart.scss
+++ b/styles/modules/_cart.scss
@@ -55,6 +55,7 @@ table {
     drop-shadow(0px 0px 8px rgba(160, 0, 216, 0.25));
   border: 2px solid purple;
   transition: all 0.3s;
+  z-index: 1;
 
   &:hover {
     transform: scale(1.1);
